--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
     "expo-auth-session": "~5.0.2",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
