--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.72.4",
     "react-native-ico-material-design": "^4.1.5",
     "react-native-svg": "^13.14.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
