--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.1",
     "expo": "~49.0.8",
     "expo-auth-session": "~5.0.2",
     "expo-crypto": "~12.4.1",
