--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,10 +23,12 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
+    "lodash.filter": "^4.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-fs": "^2.20.0",
     "react-native-ico-material-design": "^4.1.5",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
