--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -29,10 +29,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-fs": "^2.20.0",
     "react-native-ico-material-design": "^4.1.5",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
   },
