--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
+    "firebase": "^10.5.0",
     "lodash.filter": "^4.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
