--- a/VbirdFrontEnd/package.json
+++ b/VbirdFrontEnd/package.json
@@ -13,18 +13,20 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.21",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-audio-recorder-player": "^3.6.5",
     "react-native-heroicons": "^3.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-webview": "^13.6.3",
+    "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
