--- a/VbirdFrontEnd/package.json
+++ b/VbirdFrontEnd/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@alifelived/react-native-audio-record": "^1.1.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.21",
     "expo-av": "~13.4.1",
+    "expo-dev-client": "~2.4.12",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
@@ -28,8 +31,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-webview": "13.2.2",
-    "react-native-youtube-iframe": "^2.3.0",
-    "expo-dev-client": "~2.4.12"
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
