--- a/VbirdFrontEnd/package.json
+++ b/VbirdFrontEnd/package.json
@@ -29,6 +29,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-shadow": "^1.2.2",
     "react-native-svg": "13.9.0",
     "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0"
